File Name: CHANGES

10/09/2015 FASP 1.8.1:
- Add `const' to declaring constant variables.
- Check regression results again.
- Check and remove a few deprecated functions.
- Clean up print out messages.
- Test DIAG_PREF option with the new version.
- Test and modify regression_mm.c; log results in test/out/reg_mm.out.
- Update Doxygen.
- Update the ini files according to changes in FASP.
- Reformat a few functions such that it can print well in user guide.
- Rewrite user's guide and now it updates from source code.
- Complete the to-be-added parts in user's guide.
- Change regression result filenames to reg_mf.out and reg_mm.out.
- Update all regression results.

09/30/2015 FASP 1.8.0:
- Fix Clang warnings when comparing an address with NULL.
- Fix more warnings with debug=ALL except unused symbols.
- Fix missing Fortran file in VS10.
- Add FASP_VERSION macro in fasp.h.
- Update Doxygen settings.
- Update Doxygen and webpage.

09/15/2015 FASP 1.7.9:
- Add new version of transpose, permutation, and sort for dCSRmat.
- Update paramters for SA AMG.
- Update regression results after changing SA parameters.
- Replace trans and sort by transz in UMFPACK and test.
- Slightly modify printing format for the AMG parameters.
- Fix and update some parameters in ini.
- Revise some warning messages in Makefile.
- Confirm FEniCS conf problem: It sets CC=/usr/bin/gcc.
- Change filename: from fasp.mk to FASP.mk.
- Clean up interfaces to direct solvers and add reference.
- Clean up header files
- Update util/stat.h.
- Update Doxygen and webpage.

09/09/2015 FASP 1.7.8:
- Remove factor.f from the repo.
- Update VS10 to fix a directory problem in WIN32 configuration.
- Clean up Doxygen for a few functions.

09/04/2015 FASP 1.7.7:
- Replace the Fortran version of Schwarz smoother by the C version.
- Test V, AMLI, Nonlinear AMLI, F cycles with the Schwarz smoother.
- Update Doxygen and FASP webpage.
- Remove VS08; stop supporting Visual Studio before 2010.

08/19/2015 FASP 1.7.6: