@@ -79,7 +79,7 @@ AMG_smoother             = GS     % GS | JACOBI | SGS SOR | SSOR |
                                   % GSOR | SGSOR | POLY | L1DIAG | CG
 AMG_smooth_order         = CF     % NO: natural order | CF: CF order
 AMG_ILU_levels           = 0      % number of levels using ILU smoother
-AMG_Schwarz_levels       = 1	  % number of levels using Schwarz smoother
+AMG_Schwarz_levels       = 0	  % number of levels using Schwarz smoother
 AMG_relaxation	         = 1.0    % relaxation parameter for SOR smoother 
 AMG_polynomial_degree	 = 3      % degree of the polynomial smoother
 AMG_presmooth_iter       = 1      % number of presmoothing sweeps
